--- a/src/components/TreeView/TreeView.scss
+++ b/src/components/TreeView/TreeView.scss
@@ -2,7 +2,7 @@
 .TreeView {
   list-style: none;
 
-  >.name {
+  >.node-container {
     cursor: default;
     line-height: 24px;
 
@@ -29,7 +29,7 @@
   }
 
   &.expandable {
-    >.name {
+    >.node-container {
       cursor: pointer;
     }
   }
