add machine cluster node

--- a/src/assets/styles/_icons.scss
+++ b/src/assets/styles/_icons.scss
@@ -24,6 +24,9 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ico-cubes:before {
+  content: "\f1b3";
+}
 .ico-printer:before {
   content: "\e954";
 }
