--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 
 html {
   height: 100vh;
+  font-family: monospace;
 }
 
 body, #mount-point {
@@ -17,4 +18,8 @@ body, #mount-point {
 
 #mount-point {
   overflow-y: auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
