--- a/src/layouts/Split/Split.scss
+++ b/src/layouts/Split/Split.scss
@@ -2,6 +2,8 @@
 .Layout.Split {
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: row;
 
   .dragger {
     position: absolute;
@@ -13,13 +15,11 @@
   }
 
   .container {
-    &.left, &.right {
-      display: inline-block;
-      height: 100%;
-    }
-
     &.left {
       overflow: auto;
+    }
+    &.right {
+      flex: 1;
     }
   }
 }
